--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
+    "@nextui-org/react": "^2.6.11",
+    "framer-motion": "^12.4.2",
+    "lottie-react": "^2.4.1",
+    "next": "14.2.7",
+    "next-intl": "^3.26.3",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-jinke-music-player": "^4.24.2",
+    "remixicon": "^4.6.0",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
