--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@nextui-org/react": "^2.6.11",
     "framer-motion": "^12.4.2",
     "lottie-react": "^2.4.1",
+    "mongoose": "^8.10.1",
     "next": "14.2.7",
     "next-intl": "^3.26.3",
     "react": "^18",
     "react-audio-player": "^0.17.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-jinke-music-player": "^4.24.2",
     "remixicon": "^4.6.0",
